# YUJIN-AI-TRADER

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  HANDOFF.md  LICENSE  README.md  SPEC.md  WORKFLOW.md  aitrader_adapter.py  aitrader_app.py  app.py  bootstrap_env.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yml
_patches/: README.md  _r10_demobar_restore.py  _r10_demobar_v2.py  _r11_demobar_v3.py  _r15_demobar_linkreplace.py  _r17_restyle.py  _r18_phrasereplace.py  _r19_fullmatch.py  _r20_tagappend.py  _r21_killtagline.py  _r22_killphrase.py  _r23_step2_replacetag.py  _r24_theme_rewrite.py  _r25_theme_v2.py  _r26_theme_v3.py  _r27_bytecheck.py  _r27_diag.py  _r27_livelog_cipher.py  _r27_verify.py  _r28_chain_to_forex.py  _r29_anticache_meta.py  _r29_ship.sh  _r30_cleanup_ui.py  _r31_revert_chainmenu_gmgn.py  _r32_animate_fake.py  _r34_visible_overlay.py  _r35_loud_overlay.py  _r8_patch.py
api/: __init__.py  routes_account.py  routes_broker.py  routes_screen.py  routes_stream.py  routes_trade.py  routes_ws.py
config/: symbols.yaml
config/profiles/: moneta.yaml
core/: __init__.py  broker_profiles.py  data_pool.py  job_manager.py  mt5_bridge.py  positions.py  risk.py  scanner.py  strategy.py  zmq_subscriber.py
docs/: HANDOFF-ZMQ-PHASE1.md  HANDOFF-ZMQ-PHASE2.md  LLM-GUARDRAILS.md  ONBOARDING.md  REQ-ZMQ-BRIDGE.md  ROADMAP.md  WORKFLOW-ZMQ-BRIDGE.md  WORKLOG-2026-06-17.md  WORKLOG-2026-06-18.md  index.html
docs/reference/: spec-sections-9-11.md
mql5/Experts/: YUJIN_ZMQ_Bridge.mq5
scripts/: sync-docs.sh
static/: fix.py  i18n_add.py  index.html  sse_live.html  ws_live.html
tests/: conftest.py  run_phase10_tests.py  test_bal_chip_ui.py  test_broker_load_failure_counter.py  test_broker_ui_resilience.py  test_data_pool.py  test_job_manager.py  test_phase10.py  test_routes_broker.py  test_routes_stream.py  test_routes_ws.py  test_scanner.py  test_strategy.py  test_visual_regression_baseline.py
tools/: check_unicode_escapes.py  install-hooks.sh  polish_handoff.py  polish_p57t.py  polish_p59.py  polish_p62.py  polish_p63_recovery.py  test_check_unicode_escapes.py
tools/git-hooks/: pre-push
