# pyproject.toml -- PEP 621 project metadata + PEP 517 build-system
# + [tool.pyright] configuration block (Polish #7.6 LANDED).
#
# Polish #7.6 scope (single commit): declare the project explicitly via
# PEP 621 [project] so tooling (pyright, pre-commit hook, pip resolver)
# has a canonical source of truth. Polish #7.7 follows to wire pyright
# into .pre-commit-config.yaml so the static-analysis chain is
# self-bootstrapping.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yujin-mt5"
version = "0.1.0"
description = "MT5 Broker integration (Polish #7.6 scaffold)"
requires-python = ">=3.14"
dependencies = [
    # Polish #7.9 adds >=X,<Y upper bounds to all 7 production deps
    # (closes Polish #7.6 review 🟡-MEDIUM: only numpy had an upper bound
    # previously). Wide-range policy: allow minor + patch upgrades but
    # block major-version bumps inside one Polish #7.x cycle.
    # numpy: touch-pin to 2.4 baseline (Polish #7.6). Py3.14 + numpy 2.4
    # circular-import workaround in tests/conftest.py acknowledges this.
    "numpy>=2.4.0,<3",
    "fastapi>=0.110.0,<1",
    # uvicorn: keep `[standard]` extras from requirements.txt (httptools/
    # uvloop/websockets) — Polish #7.6 dropped them; Polish #7.9 restores.
    "uvicorn[standard]>=0.27.0,<1",
    # MetaTrader5: PEP 508 platform marker `sys_platform == 'win32'` so
    # Linux CI's `pip install -e .[dev]` auto-skips the Windows-only DLL.
    # Polish #8.3 adds `python_version >= '3.10'` to mirror the project's
    # Python-version hygiene floor (catches legacy-Python pip-install drift
    # on Py 3.9- EOL where MetaTrader5 ships no tested wheel); combined
    # with `requires-python = ">=3.14"` (Polish #7.9 forward-look) the
    # marker enforces: Win32-only AND Python in supported LTS range.
    # Replaces the .github/workflows/test.yml grep-v indirection.
    "MetaTrader5>=5.0.45; sys_platform == 'win32' and python_version >= '3.10'",
    "pandas>=2.0.0,<3",
    "python-dotenv>=1.0.0,<2",
    "pydantic>=2.5.0,<3",
]

[project.optional-dependencies]
# Polish #7.9 adds >=X,<Y upper bounds to dev-deps. Wide-range policy:
# major-version bumps require a new Polish #x commit, never silent drift.
dev = [
    # pytest major-bump at 8.0 is auditable separately (Polish #x.y future).
    "pytest>=7.4.0,<8",
    # pytest-asyncio: 0.x line — major-bumps go to 1.x.
    "pytest-asyncio>=0.21.0,<1",
    # pyright: Polish #7.7 wires this into .pre-commit-config.yaml —
    # keep version line bound; pre-commit's auto-installed pyright
    # honors the same constraint from this [project] block.
    "pyright>=1.1.350,<2",
    # pytest-playwright: 0.x line — major-bumps go to 1.x. Polish #7.8
    # ships the `page` fixture for test_broker_load_failure_counter.py.
    "pytest-playwright>=0.4.0,<1",
]

[tool.pyright]
# Polish #7.7 pre-commit hook will pick up these settings automatically.
include = ["core", "api"]
exclude = ["**/__pycache__", "tests/**", ".venv/**", "_phase8_src/**"]
pythonVersion = "3.14"
# SAFETY-FIRST DEFAULT: typeCheckingMode=basic (NOT strict) so the
# first pyright pass doesn't surface hundreds of pre-existing untyped
# dataclass/pydantic baseline errors. Polish-trail convention says:
# 1 commit per polish layer; tightening to 'strict' is a future ladder
# item (Polish #8.x or later) once the type-annotation coverage is
# audited + baseline exits 0.
typeCheckingMode = "basic"
# PRE-COMMIT ISOLATED-ENV SAFETY: pyright's reportMissingImports/TypeStubs
# would surface hundreds of unresolvable import errors in the pre-commit
# isolated environment where only the pyright-python hook deps are
# installed (not the full requirements.txt). Set both to false so
# pre-commit --all-files doesn't hard-fail.
reportMissingImports = false
reportMissingTypeStubs = false
# WARNING-ONLY (NOT ERROR) for general type issues: prevents CI hard
# block on minor type drifts. Polish #10.x close-out can tighten to
# "error" once the basic-mode baseline is GREEN for a full ladder.
reportGeneralTypeIssues = "warning"
